# EDAGL

./: .gitignore  CMakeLists.txt  README.md
bench_mark/: CMakeLists.txt  main.cpp
edagl/: CMakeLists.txt  UML.drawio  edgl_boolean_operations.h  global.h  version.h
edagl/algorithm/: boolean_kernel.cpp  boolean_kernel.h  boolean_kerner.cpp  boolean_kerner.h  difference.cpp  difference.h  intersection.cpp  intersection.h  union.cpp  union.h
edagl/core/: arcpolygon.cpp  arcpolygon.h  bbox.h  edge.cpp  edge.h  edgenode.cpp  edgenode.h  eventnode.cpp  eventnode.h  linkednode.h  point.cpp  point.h  polygon_with_holes.cpp  polygon_with_holes.h  rectangle.cpp  rectangle.h
edagl/geometry/: geometry.cpp  geometry.h  intersection.cpp  intersection.h
edagl/utils/: timer.h
geometry/: CMakeLists.txt  global.h
geometry/algorithm/: boolean.cpp  boolean.h  boundingbox.cpp  boundingbox.h  btree.h  collision.cpp  collision.h  contains.cpp  contains.h  decomposition.h  distance.cpp  distance.h  intersect.h  rtree.h  simplification.h  subdivision.cpp  subdivision.h
geometry/core/: arcpolygon.cpp  arcpolygon.h  bbox.cpp  bbox.h  circle.h  edge.cpp  edge.h  edgeNode.h  edgedomain.cpp  edgedomain.h  edgenode.cpp  ellipse.h  eventnode.cpp  eventnode.h  exceptions.h  line.h  lineseg.cpp  lineseg.h  linkednode.cpp  linkednode.h  linkedpoint.cpp  linkedpoint.h  mesh.h  point.cpp  point.h  polygon.h  rectangle.cpp  rectangle.h  triangle.h  vector.cpp  vector.h  vertex.h
geometry/engine/: boolean.cpp  collision.h  decomposition.cpp  decomposition.h  geometry.cpp  geometry.h  intersect.cpp  intersection.cpp  intersection.h  simplification.cpp  simplification.h  subdivision.h
geometry/math/: angle.h  matrix.h  vector.h
geometry/utils/: timer.cpp  timer.h
scripts/: format_all.sh
src/: CMakeLists.txt  display.cpp  display.h  main.cpp  reshape.cpp  reshape.h
src/cgal/: cgal_boolean_op.cpp  cgal_boolean_op.h  cgal_edagl.cpp  cgal_edagl.h
src/shaperender/: shaperender.cpp  shaperender.h
test/: CMakeLists.txt  main.cpp  test_point.cpp
test/geometry/algorithm/: test_algorithm_boolean.cpp
test/geometry/core/: test_arcpolygon.cpp  test_bbox.cpp  test_core_arcpolygon.cpp  test_core_bbox.cpp  test_core_edge.cpp  test_core_edge_domain.cpp  test_core_linkednode.cpp  test_linkednode.cpp
test/geometry/engine/: test_geometry.cpp  test_geometry_bbox.cpp  test_geometry_circle_arc.cpp  test_geometry_intersection.cpp  test_geometry_point.cpp  test_geometry_vector.cpp
test_benchmark/: CMakeLists.txt  main.cpp
